# neurotoy

./: Cargo.toml
app/: Cargo.toml
app/src/: main.rs
app/src/app/: mod.rs
app/src/app/render/: camera.rs  core.rs  mod.rs  snn.rs  window.rs
app/src/app/render/shaders/: neuron.wgsl  synapse.wgsl
snn/: Cargo.toml
snn/src/: lib.rs  render.rs
